[gd_scene load_steps=7 format=3 uid="uid://btkn8cndv3tno"]

[ext_resource type="Script" path="res://scripts/window_message.gd" id="1_chw1k"]
[ext_resource type="FontFile" uid="uid://cetimtkdjojjd" path="res://fonts/prstart.ttf" id="3_44a63"]
[ext_resource type="Script" path="res://scripts/box_menu.gd" id="3_yj6my"]
[ext_resource type="Script" path="res://scripts/inventory.gd" id="4_nvxd1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rupey"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_lrtbw"]
Panel/styles/panel = SubResource("StyleBoxFlat_rupey")

[node name="WindowMessage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
script = ExtResource("1_chw1k")

[node name="WindowMessage" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 189.0

[node name="Panel" type="Panel" parent="WindowMessage"]
layout_mode = 2
mouse_filter = 1
theme = SubResource("Theme_lrtbw")

[node name="MarginContainer" type="MarginContainer" parent="WindowMessage"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="WindowMessage/MarginContainer"]
custom_minimum_size = Vector2(240, 48)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_44a63")
theme_override_font_sizes/font_size = 14
text = "testing"
uppercase = true
max_lines_visible = 9

[node name="Timer" type="Timer" parent="WindowMessage"]
wait_time = 0.25

[node name="AdvanceButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -160.0
offset_right = -16.0
offset_bottom = -120.0
grow_horizontal = 0
grow_vertical = 2
text = ">"

[node name="VMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_left = 196.0
offset_top = 216.0
offset_right = 284.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_yj6my")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 480.0
offset_bottom = 192.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Inventory" type="GridContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
columns = 2
script = ExtResource("4_nvxd1")

[node name="LineEditContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 296.0
offset_right = 400.0
offset_bottom = 320.0

[node name="LineEdit" type="LineEdit" parent="LineEditContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_length = 30

[node name="LineEditSubmit" type="Button" parent="LineEditContainer"]
layout_mode = 2
text = "SUBMIT"
